--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -106,6 +106,43 @@
     font-size: 12px;
 }
 
+.headerIcons .icons .profile {
+    width: 40px;
+    height: 40px;
+    background-color: #f25278;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    position: relative;
+
+}
+
+.headerIcons .icons .profile p {
+    margin-bottom: 0;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.headerIcons .icons .logout {
+    top: 78px;
+    width: 200px;
+    right: 40px;
+    width: 150px;
+    position: absolute;
+    z-index: 99999;
+    padding: 0.5rem;
+    background-color: #ffffff;
+    border-radius: 0 0 10px 10px;
+    box-shadow: 0 4px 12px 0 rgb(0 0 0 / 5%);
+    text-align: left;
+}
+
+.headerIcons .icons .logout p {
+    font-size: 14px;
+
+}
 
 /*---------------------------MEDIA QUERY------------------------------*/
 @media (max-width:1440px) {
