--- a/src/components/wishlist/wishList.module.css
+++ b/src/components/wishlist/wishList.module.css
@@ -21,12 +21,15 @@
 
 .productDescription {
     padding: 1rem;
+    display: grid;
+    gap: 10px;
 }
 
 .productDescription .productName {
     font-size: 16px;
     font-weight: 300;
     color: gray;
+    margin: 0;
 }
 
 .productDescription .productPrice {
@@ -39,6 +42,7 @@
 .productPrice .discountPrice {
     font-size: 14px;
     font-weight: 400;
+    margin: 0;
 }
 
 .productPrice .actualPrice {
@@ -46,12 +50,14 @@
     font-size: 10px;
     font-weight: 200;
     text-decoration: line-through;
+    margin: 0;
 }
 
 .productPrice .offPrice {
     color: orangered;
     font-size: 11px;
     font-weight: 500;
+    margin: 0;
 }
 
 .moveBagButton {
